# Receipt-Extractor

./: .gitattributes  .gitignore  AI_CALCULATION_FIX.md  AI_EXTRACTION_IMPROVEMENTS.md  API_KEYS_INFO.md  BACKEND_INTEGRATION.md  CHANGELOG.md  COMPLETE_SYSTEM_OVERVIEW.md  CROSS_PLATFORM_SETUP.md  Cargo.toml  Email To Customer Template.html  GROQ_SETUP.md  KEYGEN_README.md  LICENSE  LICENSE_KEYS_FOR_TESTING.md  MULTIPLE_TAX_FIX.md  PDFiumConfig.cmake  PROJECT_STRUCTURE.md  QUICK_FIX.md  QUICK_START_GUIDE.md  README.md  SETUP.md  USER_MANAGEMENT_GUIDE.md  WINDOW_PERSISTENCE.md  build.rs  download_pdfium.ps1  fix_onedrive.bat  package-lock.json  run.bat  run.sh  run_debug.bat  switch_to_gnu.bat  test_pdfium.sh  test_receipt.txt
admin_tool/: Cargo.toml  README.md
admin_tool/src/: app.rs  database.rs  keygen.rs  main.rs
backend/: .env.example  BACKEND_DOCUMENTATION.md  README.md  SETUP_GUIDE.md  check-order-attributes.js  check-recent-licenses.js  check-recent-orders.js  check-webhook-config.js  create-product.js  create-user.sql  migrate-add-revoked.js  migrate-to-railway.js  package-lock.json  package.json  register-order-updated-webhook.js  register-webhook-auto.js  register-webhook.js  server.js  setup-railway-db.js  start-ngrok.ps1  test-add-license-to-order.js  test-api.ps1  test-api.sh  test-db-connection.js  test-resend-email.js  test-search.ps1  test-shopify-webhook.js  test-shopify.js  test-webhook.ps1  update-webhook-fields.js  update-webhook-url.js
src/: ai_extractor.rs  app.rs  csv_exporter.rs  debug_log.rs  document_processor.rs  main.rs  ocr.rs
(+12 files in other folders)
