[package]
name = "receipt_extractor"
version = "0.1.0"
edition = "2021"
default-run = "receipt_extractor"

[dependencies]
eframe = "0.29"
egui = "0.29"
rfd = "0.15"
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
base64 = "0.22"
anyhow = "1.0"
image = "0.25"
pdf-extract = "0.7"
walkdir = "2.5"
opener = "0.7"
pdfium-render = "0.8.37"
aes-gcm = "0.10"
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
rand = "0.9.2"
scraper = "0.20"
urlencoding = "2.1.3"
tesseract = "0.15"
rust_xlsxwriter = "0.92.4"

[profile.release]
opt-level = 2
strip = true
lto = true

