[package]
name = "receipt_admin"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
mysql = "25.0"
rand = "0.9.2"
chrono = "0.4"
csv = "1.3"
rfd = "0.16.0"

[profile.release]
opt-level = 2
strip = true
lto = true

